# tg-bot-test

./: .gitignore  Dockerfile.backend  Makefile  README.md  docker-compose.yml  pyproject.toml  start.sh  up.sh
app/: main.py  openapi_current.json
